samples/_failures_safe/1761307010_919e1f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_240575fe.c: In function ‘main’:
./samples/SAFE/__tmp_240575fe.c:171:5: error: expected expression at end of input
  171 |     if (len > 0 &&
      |     ^~
./samples/SAFE/__tmp_240575fe.c:171:5: error: expected declaration or statement at end of input
